# miniServer

./: .gitignore  LICENSE  README.md  repos.sh
misaka/: AUTHORS  Makefile  Makefile.am  Makefile.in  bgs.h  common.c  config.h  config.h.in  config.status  configure  configure.ac  core.c  echo_task.c  gcp.h  hash.c  kmem.c  link.h  log.c  ludp_link.c  main.c  memtypes.h  network.c  prefix.h  sdio_link.c  sigevent.c  sigevent.h  spinlock.h  stream.h  tags  task.h  tasklist.c  tasklist.h  tcp_link.c  thread.c  thread.h  udp_link.c  vector.h
misaka/.deps/: main.Po
misaka/app/: Makefile.am
misaka/app/echo/: Makefile.am  main.c
misaka/autom4te.cache/: output.0  requests  traces.0  traces.1
misaka/include/: common.h  gcp.h  hash.h  idmaker.h  kmem.h  link.h  linklist.h  list.h  log.h  memory.h  memtypes.h  misaka.h  msg.h  pub.h  shm.h  skynet_mq.h  slog.h  sockunion.h  spinlock.h  stream.h  sysplugin.h  task.h  tasklist.h  timer.h  types.h  zebra.h  zlog.h
misaka/lib/: Makefile  Makefile.am  Makefile.in  common.c  core.c  hash.c  idmaker.c  kmem.c  libhandle.c  linklist.c  log.c  memory.c  network.c  prefix.c  pub.c  shm.c  skynet_mq.c  sockunion.c  stream.c  sysplugin.c  thpool.c  timer.c  vector.c  zlog.c
misaka/lib/.deps/: common.Po  core.Po  hash.Po  kmem.Po  linklist.Po  log.Po  memory.Po  network.Po  pub.Po  shm.Po  sockunion.Po  stream.Po  tasklist.Po  (+2 more)
misaka/link/: Makefile  Makefile.am  Makefile.in  ludp_link.c  sdio_link.c  tcp_link.c  udp_link.c
misaka/parse/: parse.c
misaka/parser/: Makefile.am  normal_parser.c
misaka/src/: Makefile  Makefile.am  Makefile.in
misaka/task/: Makefile  Makefile.am  Makefile.in  echo_task.c
misaka/task-lua/: echo.lua
misaka/task-python/: echo.py
(+20 files in other folders)
